rendered/envs/alpha/jellyfin/deployment-jellyfin-filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin-filebrowser
spec:
  selector:
    matchLabels:
      app: jellyfin-filebrowser
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin-filebrowser
    spec:
      containers:
        - image: filebrowser/filebrowser:v2.28.0
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
          name: filebrowser
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
          volumeMounts:
            - mountPath: /database
              name: database
            - mountPath: /srv/media
              name: jellyfin-media
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: jellyfin-filebrowser-db
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media
