rendered/envs/alpha/jellyfin/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: index.docker.io/jellyfin/jellyfin@sha256:aefb67e6a7ff1debdd154a78a7bbb780fd0c873d8639210a7f6a2016ad2b35db
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 256Mi
          securityContext:
            privileged: true
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
          volumeMounts:
            - mountPath: /dev/dri/renderD128
              name: render-device
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
        - env:
            - name: FB_DATABASE
              value: /database/database.db
          image: index.docker.io/filebrowser/filebrowser@sha256:a469ea076d4a1b4b1d86a41d130f2f536cd9da996a2b1fb39c0d7635f9d89b9a
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http-fb
          name: filebrowser
          ports:
            - containerPort: 80
              name: http-fb
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http-fb
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http-fb
            periodSeconds: 5
          volumeMounts:
            - mountPath: /database
              name: filebrowser-db
            - mountPath: /srv/media
              name: media
        - env:
            - name: WEBUI_PORT
              value: "8080"
          image: oci.zebradil.dev/ghcr.io-cache/hotio/qbittorrent@sha256:39829b3e092a91fb15f6696d5a8b762a2da6436ff59e529e13305e6bfb52f829
          name: torrent
          ports:
            - containerPort: 8080
              name: http-tr
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - mountPath: /data
              name: media
            - mountPath: /config
              name: torrent-config
      nodeName: junior
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        supplementalGroups:
          - 105
      volumes:
        - hostPath:
            path: /dev/dri/renderD128
            type: CharDevice
          name: render-device
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: filebrowser-db
          persistentVolumeClaim:
            claimName: jellyfin-filebrowser-db
        - name: torrent-config
          persistentVolumeClaim:
            claimName: jellyfin-torrent-config
        - emptyDir: {}
          name: wireguard-config
