rendered/envs/alpha/jellyfin/service-jellyfin-filebrowser.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin-filebrowser
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-fs
  selector:
    app: jellyfin
