rendered/envs/alpha/jellyfin/ingressroute-jellyfin-filebrowser-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin-filebrowser-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin-filebrowser.zebradil.dev`) || Host(`jellyfin-filebrowser.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: jellyfin-filebrowser
          port: http
