rendered/envs/alpha/jellyfin/ingressroute-jellyfin-torrent-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin-torrent-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin-torrent.lan.zebradil.dev`) || Host(`jellyfin-torrent.junior.lan.zebradil.dev`) || Host(`jellyfin-torrent.zebradil.dev`) || Host(`jellyfin-torrent.junior.zebradil.dev`)
      services:
        - name: jellyfin-torrent
          port: http
