rendered/envs/alpha/jellyfin/ingressroute-jellyfin-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: jellyfin-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.ts.zebradil.dev`) || Host(`jellyfin.junior.ts.zebradil.dev`)
      services:
        - name: jellyfin
          port: http
